# gl

./: .clang-tidy  .gitignore  .lvimrc  README.md  meson.build
bmp/: bmp.c  meson.build
ds/: meson.build  vector.c
gl/: gl.c  matrix.c  meson.build  vector.c
include/bmp/: bmp.h
include/ds/: vector.h
include/gl/: gl.h  matrix.h  vector.h
include/models/: models.h
labs/: meson.build
labs/hw1/: hw1.c  meson.build
labs/hw4/: hw4.c
labs/lab1/: lab1.c
labs/main/: main.c
labs/sr3/: sr3.c
labs/sr4/: sr4.c
labs/sr5/: sr5.c
models/: meson.build  models.c
tests/: meson.build
tests/gl/: gl_test.c  meson.build
tests/hw1/: hw1.c  meson.build
