executable('hw1', 'hw1/hw1.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

executable('sr3', 'sr3/sr3.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

executable('lab1', 'lab1/lab1.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

configure_file(input : 'sr3/heli.obj',
               output : 'heli.obj',
               copy: true)

