executable('hw1', 'hw1/hw1.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

executable('sr3', 'sr3/sr3.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

executable('lab1', 'lab1/lab1.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

executable('sr4', 'sr4/sr4.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

executable('sr5', 'sr5/sr5.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

configure_file(input : 'test.obj',
               output : 'test.obj',
               copy: true)

configure_file(input : 'test.bmp',
               output : 'test.bmp',
               copy: true)
