
executable('main', 'main/main.c',
  include_directories : gl_include_dirs,
  link_with : gl_lib)

configure_file(input : 'rex.obj',
               output : 'rex.obj',
               copy: true)

configure_file(input : 'rex.bmp',
               output : 'rex.bmp',
               copy: true)

configure_file(input : 'bg.bmp',
               output : 'bg.bmp',
               copy: true)

configure_file(input : 'snake.obj',
               output : 'snake.obj',
               copy: true)

configure_file(input : 'snake.bmp',
               output : 'snake.bmp',
               copy: true)

configure_file(input : 'nakedsnake.obj',
               output : 'nakedsnake.obj',
               copy: true)

configure_file(input : 'nakedsnake.bmp',
               output : 'nakedsnake.bmp',
               copy: true)

configure_file(input : 'ray.obj',
               output : 'ray.obj',
               copy: true)

configure_file(input : 'ray.bmp',
               output : 'ray.bmp',
               copy: true)